fix divider and panel button width spacing

--- a/avidaEdEco.css
+++ b/avidaEdEco.css
@@ -218,9 +218,9 @@ html {
 
 /* structures in the headerRow */  
 #leftPanelButton{
-    border-radius: 5px 5px 5px 5px;                  /* top-left, top-right, bottom-right, bottom-left */
-    height: 16px;
-    padding: 0px 4px 0px 2px;  /* top right bottom left */
+    border-radius: 5px;                  /* top-left, top-right, bottom-right, bottom-left */
+    /* height: 16px; */
+    padding: 0px 4px 0px 5px;  /* top right bottom left */
     alt: 'button to open/close left panel'; 
     text-align: center;
     vertical-align: middle;
@@ -245,9 +245,9 @@ html {
 }
 
 #ritePanelButton{
-    border-radius: 5px 5px 5px 5px;                  /* top-left, top-right, bottom-right, bottom-left */
-    height: 16px;
-    padding: 0px 4px 0px 2px;  /* top right bottom left */
+    border-radius: 5px;                  /* top-left, top-right, bottom-right, bottom-left */
+    /* height: 16px; */
+    padding: 0px 5px 0px 4px;  /* top right bottom left */
     alt: 'button to open/close right panel'; 
     text-align: center;
     vertical-align: middle;
